--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# all env files
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
