--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@agility/content-sync": "^1.0.3",
+    "@agility/nextjs": "^0.4.1",
+    "fs-extra": "^10.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
