--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fs-extra": "^10.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sanitize-html": "^2.5.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
