--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@agility/content-sync": "^1.0.3",
     "@agility/nextjs": "^0.4.1",
+    "@algolia/autocomplete-core": "^1.5.1",
+    "@algolia/autocomplete-preset-algolia": "^1.5.1",
+    "algoliasearch": "^4.11.0",
     "fs-extra": "^10.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
