--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next postbuild && next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "algoliasearch": "^4.11.0",
     "fs-extra": "^10.0.0",
     "next": "11.1.2",
+    "next-sitemap": "^1.9.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sanitize-html": "^2.5.2"
