--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@algolia/autocomplete-preset-algolia": "^1.5.1",
     "algoliasearch": "^4.11.0",
     "fs-extra": "^10.0.0",
-    "next": "11.1.2",
+    "next": "^12.0.8",
     "next-sitemap": "^1.9.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
