--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,5 @@ env.local
 
 # Generated build time
 /public/sitemap.xml
-excludedPages.json
+/data/excludedPages.json
 /data/agilityRedirects.json
