--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@agility/nextjs": "^0.4.2",
     "@algolia/autocomplete-core": "^1.5.1",
     "@algolia/autocomplete-preset-algolia": "^1.5.1",
+    "@builder.io/partytown": "^0.7.3",
     "algoliasearch": "^4.11.0",
     "fs-extra": "^10.0.0",
     "jsforce": "^1.10.1",
