--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node ./fetchAgilityRedirects && node ./fetchExcludedPages.js && node ./fetchArchivesPageData.js && node ./fetchPardotFormData && next dev -p 3009",
-    "build": "node ./fetchAgilityRedirects && node ./fetchExcludedPages.js && node ./fetchArchivesPageData.js && node ./fetchPardotFormData && next build",
+    "dev": "node ./fetchAgilityRedirects && node ./fetchExcludedPages.js && node ./fetchPardotFormData && next dev -p 3009",
+    "build": "node ./fetchAgilityRedirects && node ./fetchExcludedPages.js && node ./fetchPardotFormData && next build",
     "start": "next start",
     "postbuild": "next-sitemap",
     "lint": "next lint"
