--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "faunadb": "^4.7.1",
     "fs-extra": "^10.0.0",
     "jsforce": "^1.10.1",
-    "next": "^12.1.6",
+    "next": "^13.1.2",
     "next-sitemap": "^1.9.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sanitize-html": "^2.5.2"
   },
   "devDependencies": {
     "axios": "^0.26.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "^13.1.2",
     "sass": "^1.42.1"
   }
 }
